# CPU_Simulator

./: .gitignore  CMakeLists.txt  CPU.cpp  CPU.h  CPU_MIPS.cpp  CPU_MIPS.h  GPIO.cpp  GPIO.h  HardwareBlock.cpp  HardwareBlock.h  Instruction.cpp  Instruction.h  MIPS_CPU.cpp  MIPS_CPU.h  MIPS_Instructions.cpp  MIPS_Instructions.h  Memory.cpp  Memory.h  Parser.cpp  Parser.h  Peripheral.cpp  Peripheral.h  Peripherals.cpp  Peripherals.h  README.md  SoC.cpp  SoC.h  WorkSpace.cpp  WorkSpace.h  Workspace.cpp  Workspace.h  catch.hpp  main.cpp  main.h  main_test.cpp  read_mem.cpp  read_mem.h  read_write_mem.cpp  read_write_mem.h  test.hex
Test/: iii.txt  turn_on_led.asm  turn_on_led.hex
